# gamecode-mcp

./: Cargo.toml  README.md  gamecode-mcp.json  mcp.json  test_server.sh  tools.yaml  tools.yaml.example
examples/: JSON_CONVERSION.md  README.md  README_EXAMPLES.md  basic_examples.yaml  cli_tool_with_examples.rs  example_cli_integration.rs  example_tools.yaml  tools.yaml  tools_with_examples.yaml  userinfo_example.yaml
scripts/: configure_claude_code.sh  test_mcp_server.sh
src/: audit.rs  cli_tool.rs  dynamic_tools.rs  main.rs  tool_registry.rs
