[package]
name = "gamecode-mcp"
version = "0.7.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.1", features = ["server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
home = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flag-rs = "0.7"
chrono = "0.4"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
